<resources>
    <string name="app_name">Personal Expense</string>
    <string name="action_settings">Settings</string>
    <string name="how_much">How much?</string>
    <string name="expense_for">For?</string>
    <string name="save_ok">Save record ok!</string>
    <string name="today">Today</string>
    <string name="total">Total:</string>
    <string name="yesterday">Yesterday</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete_msg">This will delete your record forever.</string>
    <string name="save">Save</string>
    <string name="choose">Choose</string>
    <string name="pick_date">Pick date</string>
</resources>
