<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:padding="12dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
        android:hint="@string/how_much"
        android:inputType="numberDecimal"
        android:id="@+id/amount_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        tools:text="100.000 VND"
        android:textStyle="bold"
        android:textColor="@color/number_regular"
        android:id="@+id/preview_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"/>

    <EditText
        android:layout_marginTop="4dp"
        android:hint="@string/expense_for"
        android:inputType="textMultiLine"
        android:lines="5"
        android:id="@+id/note_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_gravity="center"
        android:id="@+id/save_button"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <Button
            android:layout_weight="1"
            android:layout_gravity="center"
            android:id="@+id/yesterday_button"
            android:text="@string/yesterday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_gravity="center"
            android:layout_weight="1"

            android:id="@+id/choose_date_button"
            android:text="@string/choose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
